==> iarsystems/ewarm-nxp-example-projects/MX25/IAR-IMX25-SK/Accelerometer_Demo/modules/drv_glcd.c <==
#include <stdio.h>
#include <stdlib.h>
#include <assert.h>
#include <stdarg.h>
#include "board.h"
#include "drv_glcd.h"
#define C_HGLCD_V_SIZE          320
#define C_HGLCD_H_SIZE          240
#define C_GLCD_H_PULSE          2
#define C_GLCD_H_FRONT_PORCH    3
#define C_GLCD_H_BACK_PORCH     4
#define C_GLCD_V_PULSE          3
#define C_GLCD_V_FRONT_PORCH    2
#define C_GLCD_V_BACK_PORCH     15
#define _1MS_LOOP_DLY           24200UL
#define LCD_VRAM_BASE_ADDR    ((Int32U)VBuffer)
#define LCD_GRVRAM_BASE_ADDR  ((Int32U)GRVBuffer)

void GLCD_Cursor_Cfg(Int32U BlinkSpeed, Int32U H_Size, Int32U V_Size, Int32U ColMap)
{
  LCWHBR_bit.CW = H_Size;
  LCWHBR_bit.CH = V_Size;
  LCWHBR_bit.BD = BlinkSpeed;
  LCWHBR_bit.BK_EN = 0 != BlinkSpeed;
  LCCMR = ColMap;
}

void GLCD_Move_Cursor(int x, int y)
{
  LCPR_bit.CXP = y;
  LCPR_bit.CYP = x;
}

void GLCD_Init (const Int32U *pPain, const Int32U * pPallete)
{
pInt32U pDst = (pInt32U) LCD_VRAM_BASE_ADDR;

  _Layer = GLCD_BACKGROUND_LAYER;

  // Init System (SPI) Interface
  // LCD RST
  IOMUXC_SW_MUX_CTL_PAD_UART2_CTS_bit.MUX_MODE = ALT5_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_UART2_CTS_bit.SION = 1;
  GPIO4_DR_bit.DR29 = 1;
  GPIO4_GDIR_bit.GDIR29 = 1;

  // LCD CS
  IOMUXC_SW_MUX_CTL_PAD_CSPI1_SS1_bit.MUX_MODE = ALT5_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_CSPI1_SS1_bit.SION = 1;
  GPIO1_DR_bit.DR17 = 1;
  GPIO1_GDIR_bit.GDIR17 = 1;

  // LCD SCL
  IOMUXC_SW_MUX_CTL_PAD_CSPI1_SCLK_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_CSPI1_SCLK_bit.SION = 1;

  // LCD D0
  IOMUXC_SW_MUX_CTL_PAD_CSPI1_MISO_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_CSPI1_MISO_bit.SION = 1;

  // LCD DI
  IOMUXC_SW_MUX_CTL_PAD_CSPI1_MOSI_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_CSPI1_MOSI_bit.SION = 1;

  // Enable a clock
  CGCR1_bit.ipg_clk_cspi1 = 1;
  // Disable SPI module (reset module)
  CSPI1_CONREG_bit.EN   = 0;
  CSPI1_CONREG_bit.MODE = 1;
  CSPI1_CONREG_bit.XCH  = 0;
  CSPI1_CONREG_bit.SMC  = 1;
  CSPI1_CONREG_bit.POL  = 1;
  CSPI1_CONREG_bit.PHA  = 1;

  // CSPI1_CONREG_bit.SSCTL = 0;
  CSPI1_CONREG_bit.SSPOL = 0;
  CSPI1_CONREG_bit.DRCTL = 0;
  CSPI1_CONREG_bit.CS    = 1;
  CSPI1_CONREG_bit.DATA_RATE    = 1; // /4
  CSPI1_CONREG_bit.BURST_LENGTH = 8-1;

  // Enable SPI module
  CSPI1_CONREG_bit.EN = 1;
  CSPI1_STATREG_bit.TC = 1;

  // Power-up LCD
	GPIO4_DR_bit.DR29=0;
	_GLCD_Delay_ms(15);
	GPIO4_DR_bit.DR29=1;
	_GLCD_Delay_ms(20);

	//************* Start Initial Sequence **********//
  _GLCD_WriteCom(0x00E3);_GLCD_WriteData(0x3008);	// Set internal timing
  _GLCD_WriteCom(0x00E7);_GLCD_WriteData(0x0012);	// Set internal timing
	_GLCD_WriteCom(0x00EF);_GLCD_WriteData(0x1231);	// Set internal timing
	_GLCD_WriteCom(0x0001);_GLCD_WriteData(0x0100); // set SS and SM bit
	_GLCD_WriteCom(0x0002);_GLCD_WriteData(0x0700); // set 1 line inversion
	_GLCD_WriteCom(0x0003);_GLCD_WriteData(0x1020);	// set GRAM write direction and BGR=1.
	_GLCD_WriteCom(0x0004);_GLCD_WriteData(0x0000);	// Resize register
	_GLCD_WriteCom(0x0008);_GLCD_WriteData((C_GLCD_V_FRONT_PORCH << 8) || C_GLCD_V_BACK_PORCH);	// set the back porch and front porch
	_GLCD_WriteCom(0x0009);_GLCD_WriteData(0x0000);	// set non-display area refresh cycle ISC[3:0]
	_GLCD_WriteCom(0x000A);_GLCD_WriteData(0x0000);	// FMARK function
	_GLCD_WriteCom(0x000C);_GLCD_WriteData(0x0110); // RGB interface setting
  _GLCD_WriteCom(0x000D);_GLCD_WriteData(0x0000);	// Frame marker Position
	_GLCD_WriteCom(0x000f);_GLCD_WriteData(0x0000);	// RGB interface polarity
//*************Power On sequence ****************//
	_GLCD_WriteCom(0x0010);_GLCD_WriteData(0x0000);
  _GLCD_WriteCom(0x0011);_GLCD_WriteData(0x0007);
	_GLCD_WriteCom(0x0012);_GLCD_WriteData(0x0000);
	_GLCD_WriteCom(0x0013);_GLCD_WriteData(0x0000);
	_GLCD_Delay_ms(200);
	_GLCD_WriteCom(0x0010);_GLCD_WriteData(0x1690); // SAP, BT[3:0], AP, DSTB, SLP, STB
  _GLCD_WriteCom(0x0011);_GLCD_WriteData(0x0227); // DC1[2:0], DC0[2:0], VC[2:0]
  _GLCD_Delay_ms(50);
	_GLCD_WriteCom(0x0012);_GLCD_WriteData(0x001B); // Internal reference voltage= Vci;
  _GLCD_Delay_ms(50);
	_GLCD_WriteCom(0x0013);_GLCD_WriteData(0x1600);	// Set VDV[4:0] for VCOM amplitude
	_GLCD_WriteCom(0x0029);_GLCD_WriteData(0x0018);	// Set VCM[5:0] for VCOMH
  _GLCD_WriteCom(0x002B);_GLCD_WriteData(0x000C);	// Set Frame Rate
  _GLCD_Delay_ms(50);
	_GLCD_WriteCom(0x0020);_GLCD_WriteData(0x0000);
	_GLCD_WriteCom(0x0021);_GLCD_WriteData(0x0000);
// ----------- Adjust the Gamma Curve ----------//
	_GLCD_WriteCom(0x0030);_GLCD_WriteData(0x0000);
	_GLCD_WriteCom(0x0031);_GLCD_WriteData(0x0404);
	_GLCD_WriteCom(0x0032);_GLCD_WriteData(0x0304);
	_GLCD_WriteCom(0x0035);_GLCD_WriteData(0x0005);
	_GLCD_WriteCom(0x0036);_GLCD_WriteData(0x1604);
	_GLCD_WriteCom(0x0037);_GLCD_WriteData(0x0304);
	_GLCD_WriteCom(0x0038);_GLCD_WriteData(0x0303);
	_GLCD_WriteCom(0x0039);_GLCD_WriteData(0x0707);
	_GLCD_WriteCom(0x003C);_GLCD_WriteData(0x0500);
	_GLCD_WriteCom(0x003D);_GLCD_WriteData(0x000F);
//------------------ Set GRAM area ---------------//
	_GLCD_WriteCom(0x0050);_GLCD_WriteData(0x0000);	// Horizontal GRAM Start Address
	_GLCD_WriteCom(0x0051);_GLCD_WriteData(0x00EF);	// Horizontal GRAM End Address
	_GLCD_WriteCom(0x0052);_GLCD_WriteData(0x0000);	// Vertical GRAM Start Address
	_GLCD_WriteCom(0x0053);_GLCD_WriteData(0x013F); // Vertical GRAM End Address
	_GLCD_WriteCom(0x0060);_GLCD_WriteData(0xA700);	// Gate Scan Line
	_GLCD_WriteCom(0x0061);_GLCD_WriteData(0x0001);	// NDL,VLE, REV
	_GLCD_WriteCom(0x006A);_GLCD_WriteData(0x0000);	// set scrolling line
//-------------- Partial Display Control ---------//
  _GLCD_WriteCom(0x0080);_GLCD_WriteData(0x0000);
  _GLCD_WriteCom(0x0081);_GLCD_WriteData(0x0000);
  _GLCD_WriteCom(0x0082);_GLCD_WriteData(0x0000);
  _GLCD_WriteCom(0x0083);_GLCD_WriteData(0x0000);
  _GLCD_WriteCom(0x0084);_GLCD_WriteData(0x0000);
  _GLCD_WriteCom(0x0085);_GLCD_WriteData(0x0000);
//-------------- Panel Control -------------------//

	_GLCD_WriteCom(0x0090);_GLCD_WriteData(0x0010);
	_GLCD_WriteCom(0x0092);_GLCD_WriteData(0x6000);
  _GLCD_WriteCom(0x0095);_GLCD_WriteData(0x6000); // DIVE (division ratio) x RTNE (DOTCLKs) . DOTCLKs in 1H period.

  // Init RGB Interface
  // Enable a clock
  CGCR0_bit.hclk_lcdc = 1;
  CGCR0_bit.ipg_per_lcdc = 1;
  CGCR1_bit.ipg_clk_lcdc = 0;

  LSSAR = (Int32U)VBuffer;
  _LSR_bit.XMAX = (C_HGLCD_H_SIZE / 16);   // Holds screen X Axis
  _LSR_bit.YMAX = C_HGLCD_V_SIZE;          // Specifies the Height of
                                          // the LCD panel
  LVPWR = C_HGLCD_H_SIZE;

  // Cursors Controls
  LCPR_bit.CC = 0;    // Cursor control
  LCPR_bit.OP = 0;    // Arithmetic operator Control
  LCPR_bit.CXP = 0;   // Cursor X position
  LCPR_bit.CYP = 0;   // Cursor Y Position

  LCCMR = 0;

  // Panel Control register
  LPCR_bit.TFT      = 1;  // TFT enable
  LPCR_bit.COLOR    = 1;  // Color enable (set for TFT)
  LPCR_bit.PBSIZ    = 0;  // Panel Bus Width, 0=1 bit,1=2,2=4,3=8 (does not matter for TFT)
  LPCR_bit.BPIX     = 6;  // BPP, 0=1bpp,1=2,2=4,3=8,4=12,5=16,6=18
  LPCR_bit.PIXPOL   = 0;  // Pixel Polarity, 0 = Active High, 1 = Active Low
  LPCR_bit.FLMPOL   = 1;  // First Line Marker Polarity, "
  LPCR_bit.LPPOL    = 1;  // Line Pulse Polarity, "
  LPCR_bit.CLKPOL   = 0;  // LCD Shift Clock, 0 = Active Falling, 1 = Active Rising (reverse for TFT)
  LPCR_bit.OEPOL    = 1;  // Output Enable Polarity, 0= Active High, 1 = Active Low
  LPCR_bit.SCLKIDLE = 1;  // LSCLK Idle Enable (when VSYNC is idle in TFT mode)
  LPCR_bit.END_SEL  = 0;  // Endian Select, 0 = Little, 1 = Big
  LPCR_bit.SWAP_SEL = 1;  // Swap Select, 0 = 16bpp, 1 = else
  LPCR_bit.REV_VS   = 0;  // Reverse Vertical Scan
  LPCR_bit.ACD_SEL  = 0;  // ACD Clock Source select
  LPCR_bit.ACD      = 0;  // ACD Stuff
  LPCR_bit.SCLKSEL  = 1;  // LSCLK Select, 0 = Disable OE & LSCLK when no data output in TFT mode for power savings, 1 = Always on
  LPCR_bit.SHARP    = 0;  // Sharp Panel Signals Enable
  LPCR_bit.PCD      = 7;  // Pixel CLK Divider, actual divider is PCD value + 1

  LGWSAR            = LCD_GRVRAM_BASE_ADDR;
  LGWSR_bit.GWW     = (C_HGLCD_H_SIZE / 16);   // Holds screen X Axis
  LGWSR_bit.GWH     = C_HGLCD_V_SIZE;          // Specifies the Height of graphic window
  LGWVPWR_bit.GWVPW = C_HGLCD_H_SIZE;
  LGWPOR            = 0;
  LGWPR_bit.GWXP    = 0;
  LGWPR_bit.GWYP    = 0;
  LGWCR_bit.GWCKB   = 0x3F;     // Graphic window color keying blue component
  LGWCR_bit.GWCKG   = 0x3F;     // Graphic window color keying green component
  LGWCR_bit.GWCKR   = 0x3F;     // Graphic window color keying red component
  LGWCR_bit.GW_RVS  = 0;        // Vertical scan in normal direction
  LGWCR_bit.GWE     = 0;        // Disable graphic window on screen
  LGWCR_bit.GWCKE   = 0;        // Disable color keying of graphic window
  LGWCR_bit.GWAV    = 0;        // Graphic window totally transparent
  LGWDCR_bit.GWBT   = 0;        // Burst length is dynamic

  // Horizontal configuration register
  LHCR_bit.H_WAIT_2 = C_GLCD_H_BACK_PORCH-3;  // H_WAIT2 + 3 = delay between HSYNC & first data of next line
  LHCR_bit.H_WAIT_1 = C_GLCD_H_FRONT_PORCH-1; // H_WAIT1 + 1 = delay in Pixel CLK periods between OE & HSYNC
  LHCR_bit.H_WIDTH  = C_GLCD_H_PULSE;         // H_WIDTH + 1 = width of Horizontal Sync Pulse in Pixel CLK periods

  // Vertical configuration register
  LVCR_bit.V_WIDTH  = C_GLCD_V_PULSE;         // V_WIDTH = Vertical Sync pulse width in HSYNC periods
  LVCR_bit.V_WAIT_1 = C_GLCD_V_BACK_PORCH;    // V_WAIT1 = delay between OE and VSYNC (in TFT)
  LVCR_bit.V_WAIT_2 = C_GLCD_V_FRONT_PORCH;   // V_WAIT2 = delay between VSYNC and OE of the first line of next frame

  // Panning offset register
  LPOR = 0;

  // Sharp configuration register
  LSCR = 0;

  // PWM contrast control register
  LPCCR = 0;

  // Refresh Mode Control Register disable self refresh
  LRMCR_bit.SELF_REF = 0;

  // DMA control register
  // Burst Length, 0 = Dynamic, 1 = Fixed
  LDCR_bit.BURST = 0;
  // DMA High Mark, for fixed this is
  // the length of the burst,
  LDCR_bit.HM = 4;

  // for dynamic the buffer is filled until the
  // number of empty words is equal to the High Mark
  // minus two DMA Trigger Mark, when the number of
  // words of data left in the buffer reach is this,
  // new data is burst to fill it
  LDCR_bit.TM = 8;

  // Enable
  IOMUXC_SW_MUX_CTL_PAD_OE_ACD_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_OE_ACD_bit.SION = 1;
  // PCLK
  IOMUXC_SW_MUX_CTL_PAD_LSCLK_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LSCLK_bit.SION = 1;
  // HSYNH
  IOMUXC_SW_MUX_CTL_PAD_HSYNC_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_HSYNC_bit.SION = 1;
  // VSYNH
  IOMUXC_SW_MUX_CTL_PAD_VSYNC_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_VSYNC_bit.SION = 1;
  // LD
  IOMUXC_SW_MUX_CTL_PAD_LD0_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD1_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD2_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD3_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD4_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD5_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD6_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD7_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD8_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD9_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD10_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD11_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD12_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD13_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD14_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_LD15_bit.MUX_MODE = ALT0_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_D15_bit.MUX_MODE = ALT1_MUX_MODE;
  IOMUXC_SW_MUX_CTL_PAD_D14_bit.MUX_MODE = ALT1_MUX_MODE;

  CGCR1_bit.ipg_clk_lcdc = 1;

  if(NULL != pPallete)
  {
    GLCD_SetPallet(pPallete);
  }

  if (NULL == pPain)
  {
    // clear display memory
    for(Int32U i = 0; (C_GLCD_H_SIZE * C_GLCD_V_SIZE) > i; i++)
    {
      *pDst++ = 0;
    }
  }
  else
  {
    // set display memory
    for(Int32U i = 0; (C_GLCD_H_SIZE * C_GLCD_V_SIZE) > i; i++)
    {
      *pDst++ = *pPain++;
    }
  }
}

void GLCD_SetPallet (const Int32U * pPallete)
{
pInt32U pDst = (pInt32U)&LBGLUT_BASE;
  assert(pPallete);
  for (Int32U i = 0; i < 256; i++)
  {
    *pDst++ = *pPallete++;
  }
}

void GLCD_Ctrl (Boolean bEna)
{
  if (bEna)
  {
    _GLCD_WriteCom(0x0007);_GLCD_WriteData(0x0133);	// 262K color and display ON
    _GLCD_WriteCom(0x0022);
    _GLCD_Delay_ms(50);
  }
  else
  {
    _GLCD_WriteCom(0x0007);_GLCD_WriteData(0x0000);	// 262K color and display ON
    _GLCD_Delay_ms(50);
  }
}
